--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-family: generalFont;
+  overflow-x: unset;
 }
 li {
   list-style-type: none;
@@ -11,6 +12,17 @@ li {
   box-sizing: inherit;
 }
 ul {
+  margin: 0;
+  padding: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  text-decoration: none;
   margin: 0;
   padding: 0;
 }
