--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,8 +1,8 @@
-@import "fonts";
-@import "normalize";
-@import "global";
-@import "header";
-@import "intro";
-@import "main";
-@import "review";
-@import "footer";
+@import "./common/fonts.scss";
+@import "./common/global.scss";
+@import "./common/normalize.scss";
+@import "./block/header.scss";
+@import "./block/intro.scss";
+@import "./block/main.scss";
+@import "./block/review.scss";
+@import "./block/footer.scss";
