--- a/src/style/block/footer.scss
+++ b/src/style/block/footer.scss
@@ -66,3 +66,9 @@
   padding-left: 80px;
   margin-bottom: 40px;
 }
+@media (min-width: 768px) {
+  .footer {
+    min-height: 288px;
+    min-width: 768px;
+  }
+}
