--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,6 +3,6 @@
 @import "./common/normalize.scss";
 @import "./block/header.scss";
 @import "./block/intro.scss";
-@import "./block/main.scss";
+@import "./block/product.scss";
 @import "./block/review.scss";
 @import "./block/footer.scss";
