--- a/src/style/block/footer.scss
+++ b/src/style/block/footer.scss
@@ -1,74 +1,59 @@
 .footer {
-  box-sizing: border-box;
-  padding-top: 61px;
-  padding-left: 44px;
-  padding-right: 53px;
-}
-.footer__list {
+  min-width: 321px;
+  min-height: 390px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding-top: 61px;
+  box-sizing: border-box;
 }
-.footer__contact {
+.footer__contact-header {
   font-size: 14px;
   font-weight: 700;
   line-height: 16px;
   letter-spacing: 0em;
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
-.footer__link {
-  color: rgba(0, 0, 0, 1);
-  text-decoration: none;
+.footer__number {
   font-size: 14px;
   font-weight: 300;
   line-height: 10px;
   letter-spacing: 0em;
   text-align: center;
-  display: inline-block;
-  padding-left: 10px;
 }
-.footer__image {
-  padding-left: 85px;
-  margin-bottom: 14px;
+.footer__number--vel {
+  margin-bottom: 8px;
+}
+.footer__number--mtc {
+  margin-bottom: 20px;
 }
 .footer__social {
-  font-style: normal;
-  font-weight: 700;
   font-size: 14px;
+  font-weight: 700;
   line-height: 16px;
+  letter-spacing: 0em;
   text-align: center;
-  margin-bottom: 6px;
+  margin-bottom: 10px;
+}
+.footer__social-link {
+  margin-bottom: 15px;
 }
 .footer__about {
-  font-style: normal;
+  font-size: 14px;
   font-weight: 700;
-  font-size: 14px;
   line-height: 16px;
+  letter-spacing: 0em;
   text-align: center;
-  margin-bottom: 14px;
+  margin-bottom: 20px;
 }
-.footer__link-vel {
-  padding-left: 40px;
-}
-.footer__link-mtc {
-  padding-left: 40px;
-  margin-bottom: 10px;
-}
-.footer__link-individually {
-  font-style: normal;
+.footer__individually,
+.footer__town {
+  width: 224px;
+  font-size: 14px;
   font-weight: 300;
-  font-size: 14px;
   line-height: 16px;
+  letter-spacing: 0em;
   text-align: center;
-  margin-bottom: 10px;
-}
-.footer__link-town {
-  padding-left: 80px;
-  margin-bottom: 40px;
-}
-@media (min-width: 768px) {
-  .footer {
-    min-height: 288px;
-    min-width: 768px;
-  }
+  margin-bottom: 20px;
 }
