--- a/src/style/block/footer.scss
+++ b/src/style/block/footer.scss
@@ -1,11 +1,13 @@
 .footer {
   min-width: 321px;
   min-height: 390px;
+  padding-top: 61px;
+  box-sizing: border-box;
+}
+.footer__wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 61px;
-  box-sizing: border-box;
 }
 .footer__contact-header {
   font-size: 14px;
@@ -15,7 +17,11 @@
   text-align: center;
   margin-bottom: 10px;
 }
+.footer__link {
+  text-decoration: none;
+}
 .footer__number {
+  color: #000000;
   font-size: 14px;
   font-weight: 300;
   line-height: 10px;
@@ -56,4 +62,40 @@
   letter-spacing: 0em;
   text-align: center;
   margin-bottom: 20px;
+}
+@media (min-width: 768px) {
+  .footer {
+    background: url(../images/footer/background768.svg);
+    background-repeat: no-repeat;
+    background-position: left 99px top 82px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 45px;
+    padding-top: 114px;
+    min-width: 768px;
+    min-height: 288px;
+  }
+  .footer__wrapper--social {
+    order: -1;
+  }
+  .footer__wrapper {
+    display: block;
+  }
+  .footer__individually {
+    text-align: left;
+  }
+}
+@media (min-width: 1440px) {
+  .footer {
+    background: url(../images/footer/background1440px.svg);
+    background-repeat: no-repeat;
+    background-position: left 75px top 19px;
+    min-width: 1440px;
+    min-height: 382px;
+    padding: 172px 243px 0 243px;
+  }
+  .footer__about {
+    text-align: left;
+  }
 }
